refactor: 双仓库架构重构
- 重构为公开仓库(技能代码) + 私人仓库(用户数据)
- 新增 install.sh 安装脚本，支持一键部署
- 更新所有技能使用统一路径 ~/.ai-memory/
- memory-sync 新增拉取记忆/更新技能功能
- 移除旧文档和无关技能

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+# 系统文件
 .DS_Store
-*.pyc
-__pycache__/
-.venv/
-.vscode/
-.idea/
 *.log
-.tmp.driveupload/
+
+# 模型文件（太大，不同步）
+models/
+
+# Python 缓存
+__pycache__/
+*.pyc
